# sqlplannertest-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
naivedb/: Cargo.toml
naivedb/src/: lib.rs
naivedb/tests/: 1.yml  2.sql  _panic.yml  error.planner.sql  error.yml  include.sql  ok.planner.sql  ok.yml  plannertest.rs
naivedb/tests/basics/: create.planner.sql  create.yml  select.planner.sql  select.yml
src/: apply.rs  lib.rs  resolve_id.rs  test_runner.rs
