[package]
name = "sqlplannertest"
version = "0.0.0"
edition = "2021"
description = "A yaml-based SQL planner test framework."
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/risinglightdb/sqlplannertest-rs"
repository = "https://github.com/risinglightdb/sqlplannertest-rs"
keywords = ["sql", "database", "planner", "cli"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
glob = "0.3"
libtest-mimic = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
similar = "2"
tokio = { version = "1", features = ["rt", "fs"] }
console = "0.15"

[workspace]
members = ["naivedb"]
