[package]
name = "naivedb"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
sqlplannertest = { path = ".." }
anyhow = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs"] }

[[test]]
name = "plannertest"
harness = false
