[package]
name = "naivedb"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
sqlplannertest = { path = ".." }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs"] }

[[test]]
name = "plannertest"
harness = false
